--- a/estilo.css
+++ b/estilo.css
@@ -90,6 +90,7 @@ header{
 		display:table;
 		clear:both;
 		width:960px;
+		padding-top:15px;
 	}
 	
 		header > div > article#banner > a, 
@@ -127,18 +128,60 @@ header{
 				height:350px;
 				display:inline-table;
 			}
+	
+	@import url(http://fonts.googleapis.com/css?family=Slabo+27px);
 			
 	main{
 		display:table;
 		min-height:200px;
 		width:960px;
 		margin:0 auto;
-		margin-top:78px;
+		margin-top:93px;
 		padding-top:40px;
 		background-image:url(images/sombra-banner_03.jpg);
 		background-position:top;
 		background-repeat:no-repeat;
 	}
+	
+		main > h2{
+			font-size:38px;
+			color:#79AC88;
+			font-style:italic;
+			font-family: 'Slabo 27px', serif;
+			margin:30px 0 15px 0;
+		}
+		
+		main > p{
+			font-size:16px;
+			color:#666;
+			line-height:2;
+			margin-left:30px;
+			text-align:justify;
+		}
+		
+		main > nav#nav-inferior{
+			display:table;
+			margin:0 auto;
+			margin-top:20px;
+		}
+		
+			main > nav#nav-inferior > a{
+				text-decoration:none;
+				font-size:18px;
+				color:#999;
+				font-family: 'Slabo 27px', serif;
+				font-style:italic;
+				font-weight:bold;
+				display:inline-table;
+				padding:10px;
+			}
+			
+				main > nav#nav-inferior > a:hover{
+					background:#E5FFE2;
+					color:#025800;
+					border-bottom:2px solid;
+					padding-bottom:8px;
+				}
 			
 	article#servicos{
 		min-width:800px;
