Adição do mapa na sessão contato, script php para envio de e-mail

--- a/estilo.css
+++ b/estilo.css
@@ -294,6 +294,83 @@ header{
 					border-bottom:2px solid;
 					padding-bottom:8px;
 				}
+				
+		main > div{
+			display:table;
+			padding:0 20px;
+			margin-top: 20px;
+			width:920px;
+		}
+		
+			main > div > div#formulario,
+			main > div > div#dados-mapa{
+				width:450px;
+				float:left;
+			}
+			
+				
+			main > div > div#dados-mapa{
+				margin-left:20px;
+			}
+			
+			main > div > div#formulario{
+				display:table;
+			}
+			
+			main > div > div#formulario label{
+				display:block;
+				font-family:'Slabo 27px', serif;
+				font-size:18px;
+				color:#444444;
+				padding:10px 0;
+				display:table;
+				width:100%;
+			}
+			
+			main > div > div#formulario input[type=text],
+			main > div > div#formulario input[type=email],
+			main > div > div#formulario textarea{
+				width:300px;
+				padding:8px;
+				font-family: "Trebuchet MS";
+				font-size:14px;
+				border:2px solid #dedede;
+				float:right;
+				border-radius:10px;
+				box-shadow:inset #B1B1B1 2px 2px 10px;
+			}
+			
+			main > div > div#formulario input[type=text]:focus,
+			main > div > div#formulario input[type=email]:focus,
+			main > div > div#formulario textarea:focus{
+				border: 2px solid #688865;
+			}
+			
+			main > div > div#formulario textarea{
+				height:100px;
+			}
+			
+			main > div > div#formulario input[type=submit]{
+				padding:10px 20px;
+				border-radius:10px;
+				background:#183F00;
+				color:#fff;
+				font-family:'Slabo 27px', serif;
+				font-size:18px;
+				float:right;
+			}
+			
+				main > div > div#dados-mapa h2{
+					color:#084903;
+					font-family:'Slabo 27px', serif;
+					font-size:28px;
+					font-style:italic;
+				}
+				
+				main > div > div#dados-mapa p{
+					color:#505050;
+					font-size:16px;
+				}
 			
 	article#servicos{
 		min-width:800px;
